[package]
name = "eth-log-cruncher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
indicatif = "0.17"